--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ format:
       sidebar-width: 350px
 ---
 
-::: grid
+::::::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 <!-- пытаемся разместить дополнительное фоновое изображение, пока не получается -->
 
@@ -43,6 +43,10 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**31.10.2024 Сухопутная логистика. Полувагоны**
+
+На железнодорожной сети введены ограничения на приём к перевозке порожних вагонов; возможности операторов по предоставлению полувагонов под погрузку ограничены.
+
 **22.10.2024 Перевозки угля**
 
 Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах.
@@ -60,7 +64,6 @@ format:
 Прямое железнодорожное сообщение теряет конкурентные преимущества: из-за роста и непредсказуемости сроков перевозки ставки на отправку 40-футового контейнера из крупнейших городов КНР в Москву опустились ниже 9 тыс. долл.
 
 [Подробнее →](markets/markets-railways.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
@@ -174,4 +177,4 @@ index_plot
 
 ```
 :::
-:::
+:::::::
