--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -13,24 +13,27 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-:::::: {.grid style="margin-left:0%"}
+::::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*30.09.2024*
+*31.10.2024*
 
-**Ставки на полувагоны замерли в ожидании индексации тарифа РЖД.** Ставки на предоставление полувагонов под перевозку угля не изменились в сентябре, однако стоимость логистики стала доступнее для экспортёров.
+**Полувагоны остановились по требованию** 
 
-Переход на новый принцип индексации грузового железнодорожного тарифа РЖД и его резкий рост в 2025 г. может существенно снизить доходность оперирования полувагонами.
+- На железнодорожной сети введены ограничения на приём к перевозке порожних вагонов; возможности операторов по предоставлению полувагонов под погрузку ограничены.
 
-В августе на сети РЖД обновлён очередной исторический рекорд по отправке контейнеров в полувагонах, а погрузка металлических руд впервые превысила показатели прошлого года (10,5 млн т, +1,1% г/г). 
+- Погрузка каменного угля на сети РЖД в сентябре составила 25,5 млн т и обновила среднесуточный минимум с июля 2016 г. По итогам октября может быть установлен новый антирекорд.
+
+- Экспорт металлургического угля в западном направлении почти обнулился.
+
+- На фоне ужесточения денежно-кредитной политики Банка России среднесуточный лизинговый платёж за типовой полувагон достиг в октябре 3,5 тыс. руб./ваг.-сут. без НДС, а ставка аренды сроком на 1 год – 3,0 тыс. руб./ваг.-сут. без НДС.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Ставка предоставления полувагона
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
@@ -39,11 +42,10 @@ library(highcharter)
 library(openxlsx)
 library(tidyr)
 
-df <- read.xlsx(xlsxFile = '../xls/сухопутная логистика.xlsx', sheet = 1, detectDates = TRUE) 
-dt = names(df)
-dt = as.Date(as.numeric(dt), origin = "1899-12-30")
-value = as.numeric(df[5,])
-df = data.frame(dt = dt, value = value)
+df <- read.xlsx(xlsxFile = '../xls/График на сайт - ЖД.xlsx', sheet = "Полувагоны", detectDates = TRUE) 
+df = df[,1:2]
+names(df) <- c('dt', 'value')
+df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
 df = df[!is.na(df$value),]
 
 hc = highchart() %>% 
@@ -60,11 +62,8 @@ hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"М
 hc
 ```
 
-
 [*Примечание: ставка предоставления полувагона рассчитывается как среднее арифметическое между ставками предоставления типового полувагона под перевозку угля по наиболее ликвидным маршрутам экспорта: Кузбасс – порты Дальнего Востока; Кузбасс – порты Балтики; Кузбасс – порты Азово-Черноморского бассейна; Южная Якутия – порты Дальнего Востока. На эти маршруты приходится до 80% экспорта российского угля железнодорожным транспортом. Источник – ежемесячные отчёты ЦЦИ «Сухопутная логистика. Полувагоны». Полный список публикуемых ставок доступен в [Спецификации ставок сухопутной логистики.](../methodology/specs-logistics.qmd)*]{style="font-size:0.75em"}
-
 :::
-
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### События
@@ -81,4 +80,4 @@ hc
 
 [Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
 :::
-::::::
+:::::::
