--- a/methodology/specs-fertilizers.qmd
+++ b/methodology/specs-fertilizers.qmd
@@ -17,7 +17,7 @@ fig-format: svg
 +==================+============+============+=================+=================+
 | Prilled urea     | Б          | 46% азота  | приллированный  | навалом         |
 +------------------+------------+------------+-----------------+-----------------+
-| Granular urea    | Б          | 46% азота  | приллированный  | навалом         |
+| Granular urea    | Б          | 46% азота  | гранулированный | навалом         |
 +------------------+------------+------------+-----------------+-----------------+
 | Ammonium nitrate | Б          | 34% азота  | гранулированная | навалом,        |
 |                  |            |            |                 |                 |
@@ -28,8 +28,8 @@ fig-format: svg
 
 Рыночный диапазон цен на минеральные удобрения оценивается на базисах:
 
-- FOB Baltic (порты Санкт-Петербурга, Усть-Луги и Выборга, а также балтийские порты близлежащих стран, через которые может осуществляться российский экспорт); 
-- СFR India (все индийские порты).
+-   FOB Baltic (порты Санкт-Петербурга, Усть-Луги и Выборга, а также балтийские порты близлежащих стран, через которые может осуществляться российский экспорт);
+-   СFR India (все индийские порты).
 
 #### Объем партии
 
@@ -44,6 +44,8 @@ fig-format: svg
 100% предоплата.
 
 #### Валюта и единица измерения
+
+Долл./тонн
 
 Руб./тонн (с учётом НДС).
 
