--- a/index.qmd
+++ b/index.qmd
@@ -53,20 +53,25 @@ format:
 
 [Подробнее →](markets/markets-sea-freight.qmd)
 
+**21.10.2024 Уголь**
+
+**Рыночные настроения начали охлаждаться**
+
+Профицит предложения энергетического угля привел к возвращению цен ниже уровня 100 долл./т на уголь 6000 ккал/кг на базисе FOB порты Дальнего Востока.
+
+[Подробнее →](markets/markets-coal.qmd)
+
+
 **21.10.2024 Пшеница**
 
 Экспортные цены на пшеницу за неделю выросли на 8 долл. С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
 
 [Подробнее →](markets/markets-wheat.qmd)
 
-**18.10.2024 Сухопутная контейнерная логистика**
-
-Прямое железнодорожное сообщение теряет конкурентные преимущества: из-за роста и непредсказуемости сроков перевозки ставки на отправку 40-футового контейнера из крупнейших городов КНР в Москву опустились ниже 9 тыс. долл.
-
-[Подробнее →](markets/markets-railways.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+
 ### Сырьевой индекс ЦЦИ                      [→](pbc-index.qmd)
 
 -- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
