--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -13,7 +13,7 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::: {.grid style="margin-left:0%"}
+:::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
@@ -35,9 +35,9 @@ format:
 
 Первая рабочая неделя в Китае встретила участников рынка неопределенностью относительно дальнейшего движения цен. Рост, наблюдаемый до начала празднования Дня образования КНР, воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая. Участники рынка ожидали, что ясность появится 12 октября после озвучивания плана финансовой поддержки экономики КНР. Однако отсутствие деталей в анонсированных мерах охладило ожидания как инвесторов на финансовых рынках, так и трейдеров относительно будущей стоимости угольной продукции. 
 
-- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
+-   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
 
-- Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
+-   Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -52,7 +52,6 @@ format:
 -   Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 ### События
 
@@ -89,8 +88,6 @@ hc
 ```
 
 [*Примечание: ставка netback на энергетический уголь Russian Steam coal (5500 kcal/kg) расчитывается как среднее арифмитическое за месяц на базисе FCA Кузбасс Дальний Восток, руб/т.*]{style="font-size:0.75em"}
-
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -100,4 +97,4 @@ hc
 
 [Спецификация угольных котировок](../methodology/specs-coal.qmd)
 :::
-:::
+::::::
