--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,11 @@ format:
 
 ### Актуальное
 
+25 октября 2024. **Пятница с ЦЦИ: Уголь**
+
+[Материалы →](events/2024-10-25-coal.qmd)
+
+
 21 октября 2024. **На Cbonds стартует размещение аналитики Центра ценовых индексов**
 
 [Пресс-релиз →](events/2024-10-21-cbonds.qmd)
@@ -61,17 +66,14 @@ format:
 
 [Подробнее →](markets/markets-coal.qmd)
 
-
 **21.10.2024 Пшеница**
 
 Экспортные цены на пшеницу за неделю выросли на 8 долл. С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
 
 [Подробнее →](markets/markets-wheat.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-
 ### Сырьевой индекс ЦЦИ                      [→](pbc-index.qmd)
 
 -- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
