--- a/index.qmd
+++ b/index.qmd
@@ -48,9 +48,26 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+
+**06.11.2024 Подсолнечное масло**
+
+Индийские праздники поддержали цены на масла. Экспортные цены на подсолнечное масло за месяц выросли на 108 долл. 
+
+[Подробнее →](markets/markets-oilseed.qmd)
+
+**05.11.2024 Пшеница**
+
+Слабый спрос снижает экспортные цены на пшеницу. Экспортные цены на пшеницу за неделю снизились на 5 долл. Китай в 2024 г. ожидает рекордный урожай зерна  - более 700 млн т.
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+
 **31.10.2024 Сухопутная логистика. Полувагоны**
 
 На железнодорожной сети введены ограничения на приём к перевозке порожних вагонов; возможности операторов по предоставлению полувагонов под погрузку ограничены.
+
+[Подробнее →](markets/markets-railways-van.qmd)
+
 
 **22.10.2024 Перевозки угля**
 
@@ -66,11 +83,6 @@ format:
 
 [Подробнее →](markets/markets-coal.qmd)
 
-**21.10.2024 Пшеница**
-
-Экспортные цены на пшеницу за неделю выросли на 8 долл. С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
-
-[Подробнее →](markets/markets-wheat.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
