--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -113,11 +113,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+0,1 п.]{.my-custom-class style="color:#44bf78;"}** ([**+1,9 п.**]{.my-custom-class style="color:#44bf78;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-1,3 п.]{.my-custom-class style="color:#f6514c;"}** ([**-0,9 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефтепродукты [**+1,3%**]{.my-custom-class style="color:#44bf78;"}, пшеница [**-0,7%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: подсолнечное масло [**+11%**]{.my-custom-class style="color:#44bf78;"}, нефть [**-3,1%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефтепродукты [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**-0,5 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: подсолнечное масло [**+0,3 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**-1,0 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
