--- a/events/2024-10-25-coal.qmd
+++ b/events/2024-10-25-coal.qmd
@@ -8,6 +8,12 @@ lang: ru
 
 25 октября 2024 г.
 
+### Основные темы
+
+-   Состояние мировой экономики и меры экономической поддержки Китая
+-   Экспортные рынки углей и цены на уголь
+-   Рынки полувагонов и нетбэки на уголь
+
 
 ### Запись вебинара
 
@@ -20,6 +26,8 @@ lang: ru
 
 ```
 
+[Ссылка](https://vk.com/video-227681629_456239021)
+
 2.  Дожди охладили жару в Индии
 
 ```{=html}
@@ -28,6 +36,7 @@ lang: ru
 
 ```
 
+[Ссылка](https://vk.com/video/@cci.friday?z=video-227681629_456239022%2Fpl_-227681629_-2)
 
 3.  Вьетнам - растущая надежда? 
 
@@ -36,5 +45,9 @@ lang: ru
 <iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239023&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 ```
 
+[Ссылка](https://vk.com/video/@cci.friday/all?z=video-227681629_456239023%2Fclub227681629)
+
 4.  Российская логистика и экспорт: воз и ныне там
+
+Выйдет 7 ноября 2024 года
 
