--- a/forecasts/forecast-realty.qmd
+++ b/forecasts/forecast-realty.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: август 2024 г.
+## Результаты опроса: ноябрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -43,13 +43,9 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Отсутствие свободных складских площадей в московском регионе все выше толкает запрашиваемые ставки аренды на доступные площади. Но увеличение ставок при реализации проектов под заказчика замедлилось, что сохраняет ожидания по росту арендных ставок в 2025-2026 гг.
+Выросшие вдвое за последние два года запрашиваемые арендные ставки на склады и жесткая денежно-кредитная политика ЦБ приведут к сокращению спроса на рынке складской недвижимости. Прогноз по доле свободных площадей пересмотрен вверх на всем горизонте прогноза.
 
-Рост количества новых объектов будет происходить за счет проектов built-to-suit (под заказчика), что сохранит вакантность на крайне низком уровне менее 1%.
-
-Ожидания по росту средней арендной ставки на офисы класса А в Москве сохраняются на уровне менее 5% в год. Это является следствием сочетания роста ставок в центре города и сдвига структуры свободного предложения ближе к МКАД, где стоимость аренды ниже, чем в центре.
-
-Консенсус-прогноз доли свободных площадей в классе А существенно пересмотрен в сторону снижения.
+Ожидания аналитиков по офисной вакантности почти не изменились за прошедший квартал. Рост доли свободных площадей в 2025 г. является следствием выхода на рынок аренды офисов, купленных частными инвесторами в 2022-2024 гг.
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -73,13 +69,13 @@ df_last$date <- as.Date(df_last$date)
 df_last$index = 'Среднее'
 df_prev <- df_prev %>% pivot_longer(!index, names_to = "date", values_to = 'value')
 df_prev$date <- as.Date(df_prev$date)
-df_prev$index = 'Среднее, (от апреля 2024)'
+df_prev$index = 'Среднее, (от августа 2024)'
 df_range <- df_range %>% pivot_longer(-X1, names_to = "date", values_to = 'value')
 df_range$date <- as.Date(df_range$date)
 
 hc <- highchart() %>% 
    hc_xAxis(type = "datetime") %>%
-   hc_yAxis(title  = list(text = '%'), max = 1.5, min = 0) %>% 
+   hc_yAxis(title  = list(text = '%'), max = 2.5, min = 0) %>% 
    hc_plotOptions(area = list(stacking = 'normal')) %>%
    hc_add_series(df_range, hcaes(x = date, y = round(value,2), group = X1), type = 'area', color = c('#d1e5ff','#ffffff')) %>%
    hc_add_series(df_last, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dataLabels = TRUE) %>%
