--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,12 @@ format:
 
 ### Актуальное
 
+
+8 ноября 2024. Сырьевой индекс ЦЦИ. **Монетарные стимулы не видны в ценах реального рынка**
+
+[Мониторинг октябрь →](pdf/2024-10-cci-index.pdf)
+
+
 25 октября 2024. **Пятница с ЦЦИ: Уголь**
 
 [Материалы →](events/2024-10-25-coal.qmd)
@@ -35,10 +41,6 @@ format:
 13 сентября 2024. **Пятница с ЦЦИ: корабли с черным золотом**
 
 [Материалы →](events/2024-09-13-crude.qmd)
-
-13 сентября 2024. **Пятница с ЦЦИ: хлеб с маслом**
-
-[Материалы →](events/2024-09-13-wheat.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
