--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -13,10 +13,21 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-
 ### Котировки
+
+*11.11.2024 Пшеница*
+
+**Мировое производство пшеницы прирастет Казахстаном**
+
+Экспортные цены на пшеницу за неделю снизились на 2 долл.
+
+Еврокомиссия планирует разобраться с дискриминацией французской пшеницы на алжирских тендерах.
+
+USDA повысило прогноз производство пшеницы в Казахстане на 2 млн т до 18 млн т в 2024/25 г. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *05.11.2024 Пшеница*
 
@@ -40,20 +51,12 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*21.10.2024 Пшеница*
 
-**Россия притормозила казахстанскую пшеницу**
-
-Экспортные цены на пшеницу за неделю выросли на 8 долл.
-
-С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-#### Нетбэк Алтайский край, руб./т
+#### Динамика цен экспортной альтернативы к FOB Новороссийск пшеницы 12,5%, руб./т
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -88,9 +91,9 @@ hc
 
 [Материалы →](../events/2024-09-13-wheat.qmd)
 :::
-:::::
+:::
 
-::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Методология
 
@@ -101,4 +104,4 @@ hc
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 :::
-:::::
+:::
