--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -197,4 +197,4 @@ discount_plot
 
 ------------------------------------------------------------------------
 
-[Мониторинг - Сентябрь 2024](reports/2024-09-cci-index.pdf)
+[Мониторинг - Октябрь 2024](reports/2024-10-cci-index.pdf)
